--- a/careers.html
+++ b/careers.html
@@ -490,7 +490,6 @@
         <p class="footer__title" data-animation="paragraph">
           Location
         </p>
-
         <p class="footer__label" data-animation="paragraph">
           PO Box 160
         </p>
@@ -506,16 +505,15 @@
         <p class="footer__title" data-animation="paragraph">
           Social Media
         </p>
-
-
-
         <div data-animation="paragraph">
-          <a href="https://facebook.com/" target="_blank" class="footer__label">
-            <i class="fa-brands fa-facebook-square"></i>
-          </a>
-
           <a href="https://linkedin.com/" target="_blank" class="footer__label">
             <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </div>
+        <div class="footer_logo2">
+          <br>
+          <a href="./">
+            <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" />
           </a>
         </div>
 
@@ -523,19 +521,18 @@
 
       <div class="footer__email">
         <p class="footer__title" data-animation="paragraph">Email</p>
-
         <a href="mailto:contact@fiveeyes.com.au" class="footer__label"
           data-animation="paragraph">contact@fiveeyes.com.au</a>
-
-        <br><br>
-        <a href="./">
-          <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" />
-        </a>
-
+        <div class="footer_logo1">
+          <br>
+          <a href="./">
+            <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" />
+          </a>
+        </div>
       </div>
-
-
     </div>
+
+    <p class="copyright">&copy; 2022 Five Eyes - All Rights Reserved</p>
   </footer>
 
   <script src="./app/index.js" type="module"></script>
