--- a/aboutus.html
+++ b/aboutus.html
@@ -234,7 +234,7 @@
 
           <section class="reasons">
             <h4 class="reasons__title background__title" data-animation="paragraph">
-              <span>04.</span>Our Skills & Experience:
+              <span>04.</span>Our Skills & Experience
             </h4>
 
             <!-- <h3 class="reasons__label" data-animation="paragraph">
