--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <!-- 2 -->
                 <div class="item">
                   <h1 class="home__title" data-animation="paragraph">
-                    Build a <span>Career</span> with Us / Join our team
+                    Build a <span>Career</span> with Us
                   </h1>
                   <p class="home__para" data-animation="paragraph">
                     Five Eyes Consulting is an organisation built on the pillars of community and culture. We have
@@ -110,10 +110,10 @@
                 <!-- 3 -->
                 <div class="item">
                   <h1 class="home__title" data-animation="paragraph">
-                    Welcome to <span>Five Eyes Consulting</span>
+                    Explore our <span>Recent Articles</span>
                   </h1>
                   <p class="home__para" data-animation="paragraph">
-                    Australia’s trusted consultancy for Information Security across the Five Eyes Nations
+                    Five Eyes news is an independent news page and a leading source of information about IT and business security
                   </p>
                   <a href="/aboutus.html" data-animation="paragraph" class="home__link">Learn more</a>
                 </div>
