--- a/contactus.html
+++ b/contactus.html
@@ -173,7 +173,7 @@
     <p class="copyright">&copy; 2022 Five Eyes - All Rights Reserved</p>
   </footer>
 
-  <script src="./app/index.js" type="module"></script>
+  <!--script src="./app/index.js" type="module"></script-->
   <script src="https://smtpjs.com/v3/smtp.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
