--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     created an atmosphere where self-development and innovation are encouraged, and where your career
                     aspirations will be supported.
                   </p>
-                  <a href="/aboutus.html" data-animation="paragraph" class="home__link">Learn more</a>
+                  <a href="/careers.html" data-animation="paragraph" class="home__link">Learn more</a>
                 </div>
                 <!-- 3 -->
                 <div class="item">
@@ -115,7 +115,7 @@
                   <p class="home__para" data-animation="paragraph">
                     Five Eyes news is an independent news page and a leading source of information about IT and business security
                   </p>
-                  <a href="/aboutus.html" data-animation="paragraph" class="home__link">Learn more</a>
+                  <a href="/news.html" data-animation="paragraph" class="home__link">Learn more</a>
                 </div>
 
               </div>
@@ -517,7 +517,7 @@
     </div>
   </div>
 
-  <script src="./app/index.js" type="module"></script>
+  <!--script src="./app/index.js" type="module"></script-->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
