--- a/services/cloud-security.html
+++ b/services/cloud-security.html
@@ -316,7 +316,7 @@
       </div>
     </div>
   </div>
-  <script src="../app/index.js" type="module"></script>
+  <!--script src="../app/index.js" type="module"></script-->
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
