--- a/aboutus.html
+++ b/aboutus.html
@@ -108,7 +108,7 @@
           <section class="values" style="padding-bottom: 0;">
 
             <h3 class="background__title" data-animation="paragraph">
-              <span>01.</span> About us
+               About us
             </h3>
 
             <div class="values-row">
@@ -135,7 +135,7 @@
 
           <section class="background" style="padding-bottom: 0;">
             <h3 class="background__title" data-animation="paragraph">
-              <span>02.</span> Our Values
+               Our Values
             </h3>
 
             <h3 class="background__label" data-animation="paragraph">
@@ -180,7 +180,7 @@
 
           <section class="background">
             <h3 class="background__title" data-animation="paragraph">
-              <span>03.</span> Our Story
+               Our Story
             </h3>
             
             <p class="background__label">We are a fast growing information security consultancy with people, technology
@@ -234,7 +234,7 @@
 
           <section class="reasons">
             <h4 class="reasons__title background__title" data-animation="paragraph">
-              <span>04.</span>Our Skills & Experience
+              Our Skills & Experience
             </h4>
 
             <!-- <h3 class="reasons__label" data-animation="paragraph">
@@ -259,7 +259,7 @@
 
               <div class="reasons__grid__item">
                 <div class="reasons__grid__item__label" data-animation="paragraph">
-                  Certified Information Systems Security Auditor (CISA)
+                  Certified Information Systems Security Auditor (CISSA)
                 </div>
               </div>
 
