--- a/careers.html
+++ b/careers.html
@@ -69,7 +69,7 @@
           <section class="careers">
             <div class="careers__info">
               <h3 class="background__title" data-animation="paragraph" style="margin-top: 21.5rem;">
-                <span>01.</span> Join Our Team
+                 Join Our Team
               </h3>
               <!-- <h1 class="careers__info__title" data-animation="title">
                 Join Our Team
@@ -190,7 +190,7 @@
 
           <section class="background" style="padding-bottom: 0;">
             <h3 class="background__title" data-animation="paragraph">
-              <span>02.</span> Our Values
+               Our Values
             </h3>
 
             <h3 class="background__label" data-animation="paragraph">
@@ -234,7 +234,7 @@
 
           <section class="background" style="padding-bottom: 0;">
             <h3 class="background__title" data-animation="paragraph">
-              <span>03.</span> Benefits
+               Benefits
             </h3>
 
 
@@ -319,55 +319,7 @@
   </div>
 
 
-          <!-- Partners slider -->
-          <section class="background bg-white">
-            <div class="services__title__wrapper">
-              <hi class="services__title" data-animation="title">Partners</hi>
-            </div>
-            <div class="owl-carousel owl-theme" id="partners_slider">
-              <!-- 1 -->
-              <div class="item">
-                <img src="./assets/icpm.png" alt="icpm" style="width: 60%; margin: auto;" />
-              </div>
-              <!-- 2 -->
-              <div class="item">
-                <img src="./assets/Tanium.png" alt="Tanium" />
-              </div>
-              <!-- 3 -->
-              <div class="item">
-                <img src="./assets/fortinet-logo.svg" alt="fortinet" />
-              </div>
-              <!-- 4 -->
-              <div class="item">
-                <img src="./assets/microsoft.png" alt="microsoft" />
-              </div>
-              <!-- 5 -->
-              <div class="item">
-                <img src="./assets/aws.png" alt="AWS" style="width: 70%; margin: auto;" />
-              </div>
-              <!-- 6 -->
-              <div class="item">
-                <img src="./assets/cisco.png" alt="Cisco" style="width: 70%; margin: auto;" />
-              </div>
-              <!-- 7 -->
-              <div class="item">
-                <img src="./assets/solderOn.png" alt="solderOn" style="width: 90%; margin: auto;" />
-              </div>
-              <!-- 8 -->
-              <div class="item">
-                <img src="./assets/elastic-logo.svg" alt="elastic" />
-              </div>
-              <!-- 9 -->
-              <div class="item">
-                <img src="./assets/Tenable_Logo.png" alt="Tenable" />
-              </div>
-              <!-- 10 -->
-              <div class="item">
-                <img src="./assets/s1-logo-color.svg" alt="sentinel one" />
-              </div>
-
-            </div>
-          </section>
+          
 
 
   <!-- slider -->
