--- a/aboutus.html
+++ b/aboutus.html
@@ -183,9 +183,9 @@
                Our Story
             </h3>
             
-            <p class="background__label">We are a fast growing information security consultancy with people, technology
+            <h3 class="background__label">We are a fast growing information security consultancy with people, technology
               and innovation at the centre. Follow our journey from the beginning with our founders Rafal and Janstan.
-            </p>
+            </h3>
             <ol class="c-process-list">
               <li class="c__item">
                 <div class="c-process">
