--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a href="./careers.html" class="navigation__link">Careers</a>
             <a href="./news.html" class="navigation__link">News</a>
             <a href="./contactus.html" class="navigation__link">Contact Us</a>
-            <!-- <a href="mailto:contact@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
+            <!-- <a href="mailto:rafal@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
           </div>
 
           <a href="#." id="hamburger">
@@ -475,8 +475,8 @@
                   Campbell, ACT 2612
                 </p>
                 <div class="mt-5"></div>
-                <a href="mailto:contact@fiveeyes.com.au" class="footer__label"
-                  data-animation="paragraph">contact@fiveeyes.com.au</a>
+                <a href="mailto:rafal@fiveeyes.com.au" class="footer__label"
+                  data-animation="paragraph">rafal@fiveeyes.com.au</a>
               </div>
 
               <div class="footer__socials">
@@ -499,8 +499,8 @@
 
               <div class="footer__email">
                 <p class="footer__title" data-animation="paragraph">Email</p>
-                <a href="mailto:contact@fiveeyes.com.au" class="footer__label"
-                  data-animation="paragraph">contact@fiveeyes.com.au</a>
+                <a href="mailto:rafal@fiveeyes.com.au" class="footer__label"
+                  data-animation="paragraph">rafal@fiveeyes.com.au</a>
                 <div class="footer_logo1">
                   <br>
                   <a href="./">
@@ -548,7 +548,7 @@
       <a href="./careers.html" class="navigation__link">Careers</a>
       <a href="./news.html" class="navigation__link">News</a>
       <a href="./contactus.html" class="navigation__link">Contact Us</a>
-      <!-- <a href="mailto:contact@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
+      <!-- <a href="mailto:rafal@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
     </div>
   </div>
 
@@ -581,7 +581,7 @@
       <a href="./careers.html" class="navigation__link">Careers</a>
       <a href="./news.html" class="navigation__link">News</a>
       <a href="./contactus.html" class="navigation__link">Contact Us</a>
-      <!-- <a href="mailto:contact@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
+      <!-- <a href="mailto:rafal@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
     </div>
   </div>
 
