--- a/news.html
+++ b/news.html
@@ -37,31 +37,31 @@
           <a href="./">
             <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" /></a>
 
-            <div class="navigation__links">
-              <a href="./aboutus.html" class="navigation__link">About Us</a>
-              <div>
-                <a href="javascript:void(0);" class="navigation__link">Services <i class="fa-solid fa-angle-down"></i></a>
-                <ul>
-                  <li>
-                    <a href="./cyber_security.html" class="navigation__link">Cyber security</a>
-                  </li>
-                  <li>
-                    <a href="./technology.html" class="navigation__link">Technology and architecture</a>
-                  </li>
-                  <li>
-                    <a href="./project_delivery.html" class="navigation__link">Project Delivery</a>
-                  </li>
-                </ul>
-              </div>
-              <a href="./careers.html" class="navigation__link">Careers</a>
-              <a href="./news.html" class="navigation__link">News</a>
-              <a href="./contactus.html" class="navigation__link">Contact Us</a>
-              <!-- <a href="mailto:rafal@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
+          <div class="navigation__links">
+            <a href="./aboutus.html" class="navigation__link">About Us</a>
+            <div>
+              <a href="javascript:void(0);" class="navigation__link">Services <i class="fa-solid fa-angle-down"></i></a>
+              <ul>
+                <li>
+                  <a href="./cyber_security.html" class="navigation__link">Cyber security</a>
+                </li>
+                <li>
+                  <a href="./technology.html" class="navigation__link">Technology and architecture</a>
+                </li>
+                <li>
+                  <a href="./project_delivery.html" class="navigation__link">Project Delivery</a>
+                </li>
+              </ul>
             </div>
+            <a href="./careers.html" class="navigation__link">Careers</a>
+            <a href="./news.html" class="navigation__link">News</a>
+            <a href="./contactus.html" class="navigation__link">Contact Us</a>
+            <!-- <a href="mailto:rafal@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
+          </div>
 
-            <a href="#." id="hamburger">
-              <i class="fa-solid fa-bars"></i>
-            </a>
+          <a href="#." id="hamburger">
+            <i class="fa-solid fa-bars"></i>
+          </a>
         </nav>
 
         <div class="content" data-template="contacts">
@@ -85,15 +85,36 @@
                 </figure>
 
                 <h3 class="news__grid__item__title">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                  adipiscing dolor.
+                  Australia's Largest Ever Cyber Security Spend: $10bn Pledge to Double ASD & Ramp Up Offensive Cyber Operations
                 </h3>
 
                 <p class="news__grid__item__label" data-animation="paragraph">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                  adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit, adipiscing ipsum dolor sit
-                  amet.
+                  Australia is pledging to double its electronic spy agency and ramp up its
+                  offensive cyber operations with a budget of $10bn.
+                  The investment will see the Australian Signals Directorate (ASD) grow from its
+                  current size of 1,500 staff to 3,000 in the next 10 years. This is part of Australia's
+                  largest ever cyber security spend, which will also see an increase in funding for
+                  Cyber Security Operations Centres and initiatives to protect critical infrastructure.
+                  The ASD is responsible for collecting foreign intelligence, conducting cyber
+                  operations and protecting Australia's computer networks. Under the package, the
+                  ASD is expected to create opportunities for data analysts, computer
+                  programmers and software engineers in its workforce.
+                  This investment in Cyber Security comes at a time when Australians are
+                  increasingly reliant on technology and the internet. It also follows a number of
+                  high-profile Cyber Security incidents, including the 2016 Census hack and the
+                  WannaCry ransomware attack.
+                  Cyber security is a top priority for the Australian Government and this budget
+                  investment will ensure that we have the capability to protect our critical
+                  infrastructure and defend against cyber threats.
+                  This budget has been positively received for many in the Cyber Security industry
+                  who have been calling for increased investment in Cyber Security initiatives. In
+                  his address last Tuesday the National Treasurer, Scott Morrison, said the budget
+                  was "about making Australia's economy and our society more secure in the face
+                  of an increasingly complex and contested cyberspace".
+                  The Cyber Security package is a welcome investment in the safety of Australians
+                  and the protection of our critical infrastructure. It is a necessary step in ensuring
+                  that we can continue to enjoy the benefits of technology while keeping our data
+                  and systems safe from Cyber Security threats.
                 </p>
 
                 <span class="news__grid__item__line"></span>
@@ -185,7 +206,7 @@
             </div>
           </section>
 
-          
+
 
           <footer class="footer">
             <div class="footer__information">
