--- a/post1.html
+++ b/post1.html
@@ -37,31 +37,31 @@
           <a href="/">
             <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" /></a>
 
-            <div class="navigation__links">
-              <a href="./aboutus.html" class="navigation__link">About Us</a>
-              <div>
-                <a href="javascript:void(0);" class="navigation__link">Services <i class="fa-solid fa-angle-down"></i></a>
-                <ul>
-                  <li>
-                    <a href="./cyber_security.html" class="navigation__link">Cyber security</a>
-                  </li>
-                  <li>
-                    <a href="./technology.html" class="navigation__link">Technology and architecture</a>
-                  </li>
-                  <li>
-                    <a href="./project_delivery.html" class="navigation__link">Project Delivery</a>
-                  </li>
-                </ul>
-              </div>
-              <a href="./careers.html" class="navigation__link">Careers</a>
-              <a href="./news.html" class="navigation__link">News</a>
-              <a href="./contactus.html" class="navigation__link">Contact Us</a>
-              <!-- <a href="mailto:rafal@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
+          <div class="navigation__links">
+            <a href="./aboutus.html" class="navigation__link">About Us</a>
+            <div>
+              <a href="javascript:void(0);" class="navigation__link">Services <i class="fa-solid fa-angle-down"></i></a>
+              <ul>
+                <li>
+                  <a href="./cyber_security.html" class="navigation__link">Cyber security</a>
+                </li>
+                <li>
+                  <a href="./technology.html" class="navigation__link">Technology and architecture</a>
+                </li>
+                <li>
+                  <a href="./project_delivery.html" class="navigation__link">Project Delivery</a>
+                </li>
+              </ul>
             </div>
+            <a href="./careers.html" class="navigation__link">Careers</a>
+            <a href="./news.html" class="navigation__link">News</a>
+            <a href="./contactus.html" class="navigation__link">Contact Us</a>
+            <!-- <a href="mailto:rafal@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
+          </div>
 
-            <a href="#." id="hamburger">
-              <i class="fa-solid fa-bars"></i>
-            </a>
+          <a href="#." id="hamburger">
+            <i class="fa-solid fa-bars"></i>
+          </a>
         </nav>
 
         <div class="content" data-template="post">
@@ -79,15 +79,15 @@
                   Written by Five Eyes
                 </p>
                 <p class="blog__header__info__label" data-animation="paragraph">
-                  August 28 2021
+                  May 02 2022
                 </p>
               </div>
 
               <span class="blog__header__info__line"></span>
 
               <h2 class="blog__header__info__title" data-animation="paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                adipiscing dolor.
+                Australia's Largest Ever Cyber Security Spend: $10bn Pledge to Double ASD & Ramp Up Offensive Cyber
+                Operations
               </h2>
             </div>
 
@@ -101,59 +101,46 @@
             <div class="blog__content__post">
               <span class="blog__content__line"></span>
 
-              <h3 class="blog__content__subheader" data-animation="paragraph">
+              <!-- <h3 class="blog__content__subheader" data-animation="paragraph">
                 Sub Header number one
-              </h3>
+              </h3> -->
 
               <p class="blog__content__label" data-animation="paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                dignissim commodo magna urna tristique. Turpis in sed diam
-                morbi velit, gravida dolor. Quis aliquam mollis sed gravida
-                eleifend. Risus nunc, vestibulum dictum ut aliquam enim sit
-                non fames. Leo nascetur molestie sed aliquam lacus mi. Sed leo
-                commodo consequat tristique sit cras morbi. Arcu at mollis
-                orci egestas sed risus ultricies id. Donec hendrerit velit at
-                turpis nascetur id. Etiam leo dolor nunc sagittis diam dictum
-                morbi duis lorem. Non urna ac aliquet cras elementum nunc
-                gravida. Consectetur tortor in pellentesque ut cursus. Mauris
-                tellus convallis dictumst sapien aliquet aenean malesuada
-                augue. Nunc non eu, magnis fermentum non velit consequat hac
-                lorem. Amet aliquam et erat faucibus et augue turpis urna. Et
-                egestas sodales proin sollicitudin at ipsum rhoncus interdum
-                nec. Commodo metus sed vitae, orci. Faucibus consequat
-                faucibus maecenas fringilla vel tellus. Tortor, turpis
-                sagittis libero adipiscing velit, viverra. Aliquam diam lectus
-                blandit sit aliquam dignissim viverra sed neque.
+                Australia is pledging to double its electronic spy agency and ramp up its
+                offensive cyber operations with a budget of $10bn.
+                <br>
+                The investment will see the Australian Signals Directorate (ASD) grow from its
+                current size of 1,500 staff to 3,000 in the next 10 years. This is part of Australia's
+                largest ever cyber security spend, which will also see an increase in funding for
+                Cyber Security Operations Centres and initiatives to protect critical infrastructure.
+                <br>
+                The ASD is responsible for collecting foreign intelligence, conducting cyber
+                operations and protecting Australia's computer networks. Under the package, the
+                ASD is expected to create opportunities for data analysts, computer
+                programmers and software engineers in its workforce.
+                <br>
+                This investment in Cyber Security comes at a time when Australians are
+                increasingly reliant on technology and the internet. It also follows a number of
+                high-profile Cyber Security incidents, including the 2016 Census hack and the
+                WannaCry ransomware attack.
+                <br>
+                Cyber security is a top priority for the Australian Government and this budget
+                investment will ensure that we have the capability to protect our critical
+                infrastructure and defend against cyber threats.
+                <br>
+                This budget has been positively received for many in the Cyber Security industry
+                who have been calling for increased investment in Cyber Security initiatives. In
+                his address last Tuesday the National Treasurer, Scott Morrison, said the budget
+                was "about making Australia's economy and our society more secure in the face
+                of an increasingly complex and contested cyberspace".
+                <br>
+                The Cyber Security package is a welcome investment in the safety of Australians
+                and the protection of our critical infrastructure. It is a necessary step in ensuring
+                that we can continue to enjoy the benefits of technology while keeping our data
+                and systems safe from Cyber Security threats.
               </p>
             </div>
-            <div class="blog__content__post">
-              <span class="blog__content__line"></span>
-
-              <h3 class="blog__content__subheader" data-animation="paragraph">
-                Sub Header number one
-              </h3>
-
-              <p class="blog__content__label" data-animation="paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                dignissim commodo magna urna tristique. Turpis in sed diam
-                morbi velit, gravida dolor. Quis aliquam mollis sed gravida
-                eleifend. Risus nunc, vestibulum dictum ut aliquam enim sit
-                non fames. Leo nascetur molestie sed aliquam lacus mi. Sed leo
-                commodo consequat tristique sit cras morbi. Arcu at mollis
-                orci egestas sed risus ultricies id. Donec hendrerit velit at
-                turpis nascetur id. Etiam leo dolor nunc sagittis diam dictum
-                morbi duis lorem. Non urna ac aliquet cras elementum nunc
-                gravida. Consectetur tortor in pellentesque ut cursus. Mauris
-                tellus convallis dictumst sapien aliquet aenean malesuada
-                augue. Nunc non eu, magnis fermentum non velit consequat hac
-                lorem. Amet aliquam et erat faucibus et augue turpis urna. Et
-                egestas sodales proin sollicitudin at ipsum rhoncus interdum
-                nec. Commodo metus sed vitae, orci. Faucibus consequat
-                faucibus maecenas fringilla vel tellus. Tortor, turpis
-                sagittis libero adipiscing velit, viverra. Aliquam diam lectus
-                blandit sit aliquam dignissim viverra sed neque.
-              </p>
-            </div>
+            
           </section>
 
           <footer class="footer">
