--- a/post1.html
+++ b/post1.html
@@ -76,10 +76,10 @@
 
               <div class="blog__header__info">
                 <p class="blog__header__info__label" data-animation="paragraph">
-                  Written by Five Eyes
+                  Five Eyes Consulting
                 </p>
                 <p class="blog__header__info__label" data-animation="paragraph">
-                  May 02 2022
+                  Tue 29 Mar 2022 20.15 AEDT
                 </p>
               </div>
 
