--- a/post1.html
+++ b/post1.html
@@ -92,7 +92,7 @@
             </div>
 
             <figure class="blog__header__media">
-              <img class="blog__header__media__image" src="./assets/news.jpg" alt="News Cover"
+              <img class="blog__header__media__image" src="./assets/parlament-house.jpg" alt="News Cover"
                 crossorigin="anonymous" />
             </figure>
           </section>
