--- a/news.html
+++ b/news.html
@@ -72,13 +72,12 @@
               </h1>
 
               <p class="news__info__label" data-animation="paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore.
+                Five Eyes Consulting news is a trusted, and widely recognised cybersecurity news platform that attracts IT professionals, researchers, hackers, technologists, and enthusiasts.
               </p>
             </div>
 
             <div class="news__grid">
-              <a href="./blog-post.html" class="news__grid__item">
+              <a href="./post1.html" class="news__grid__item">
                 <figure class="news__grid__item__media">
                   <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
                     crossorigin="anonymous" />
@@ -120,7 +119,7 @@
                 <span class="news__grid__item__line"></span>
               </a>
 
-              <a href="./blog-post.html" class="news__grid__item">
+              <!-- <a href="./blog-post.html" class="news__grid__item">
                 <figure class="news__grid__item__media">
                   <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
                     crossorigin="anonymous" />
@@ -202,7 +201,9 @@
                 </p>
 
                 <span class="news__grid__item__line"></span>
-              </a>
+              </a> -->
+            
+            
             </div>
           </section>
 
